fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -105,11 +105,11 @@ p {
 }
 
 .tech-stack-container {
-    padding: 45vh 0;
+    padding: 30vh 0;
 }
 
 .projects-container {
-    padding: 45vh 0 0 0;
+    padding: 30vh 0 0 0;
 }
 
 #tech-stack,
